// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 939.9272667157608,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 939.9272667157608,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": -101.9614554922677,
    },
    "isLeaf": false,
    "length": 516.9599966936684,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": 156.51854285456645,
    },
    "path": "/root/src",
    "visible": true,
    "width": 328.9745433505162,
    "x0": 319.57527068335867,
    "y0": 18.798545334315214,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 150.6476073810244,
      "y": 6,
      "z": -92.85393877199334,
    },
    "isLeaf": false,
    "length": 480.5299298125709,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 150.6476073810244,
      "y": 6,
      "z": 147.4110261342921,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 138.96190356190584,
    "x0": 331.16665560007146,
    "y0": 37.01357877486394,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 282.016636437103,
      "y": 6,
      "z": -92.85393877199334,
    },
    "isLeaf": false,
    "length": 480.5299298125709,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 282.016636437103,
      "y": 6,
      "z": 147.4110261342921,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 100.59338471682577,
    "x0": 481.7199440786901,
    "y0": 37.01357877486394,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 130.22469109919706,
      "y": 506,
      "z": -141.53578409822174,
    },
    "isLeaf": true,
    "length": 212.9424147454624,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 130.22469109919706,
      "y": 506,
      "z": -35.064576725490554,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 74.93330116482548,
    "x0": 342.7580405167843,
    "y0": 55.22861221541265,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 130.22469109919706,
      "y": 506,
      "z": 89.62166408778938,
    },
    "isLeaf": true,
    "length": 212.94241474546243,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 130.22469109919706,
      "y": 506,
      "z": 196.0928714605206,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 74.93330116482548,
    "x0": 342.7580405167843,
    "y0": 286.3860604014238,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 261.59372015527566,
      "y": 506,
      "z": -83.74642205171895,
    },
    "isLeaf": true,
    "length": 444.0998629314736,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 261.59372015527566,
      "y": 506,
      "z": 138.30350941401784,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 36.564782319745404,
    "x0": 493.31132899540296,
    "y0": 55.22861221541265,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 55.47636168262221,
      "y": 4,
      "z": 454.94545003682055,
    },
    "isLeaf": false,
    "length": 281.9781800147283,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 290.4581783615624,
      "y": 4,
      "z": 454.94545003682055,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 469.9636333578803,
    "x0": 187.98545334315213,
    "y0": 563.9563600294564,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -29.117092321796235,
      "y": 6,
      "z": 347.7937416312238,
    },
    "isLeaf": false,
    "length": 56.39563600294571,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 17.879271013991797,
      "y": 6,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 93.99272667157607,
    "x0": 197.38472601030975,
    "y0": 569.5959236297509,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -28.31941713080692,
      "y": 506,
      "z": 347.7937416312238,
    },
    "isLeaf": true,
    "length": 48.73795416944802,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 7.509493531130509,
      "y": 506,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 71.65782132387486,
    "x0": 203.76612753822437,
    "y0": 573.4247645464998,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238.76217869219556,
      "y": 6,
      "z": 528.2597768406499,
    },
    "isLeaf": false,
    "length": 135.34952640706956,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 351.5534506980868,
      "y": 6,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 225.58254401178255,
    "x0": 432.3665426892499,
    "y0": 710.5850136371151,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 212.9613416778609,
      "y": 506,
      "z": 479.10568673106945,
    },
    "isLeaf": true,
    "length": 43.40133574044876,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 212.9613416778609,
      "y": 506,
      "z": 500.80635460129383,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 35.62180078108133,
    "x0": 445.15044128732023,
    "y0": 718.2553527959573,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 261.36704105701256,
      "y": 506,
      "z": 479.10568673106945,
    },
    "isLeaf": true,
    "length": 43.40133574044876,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 261.36704105701256,
      "y": 506,
      "z": 500.80635460129383,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 35.62180078108139,
    "x0": 493.5561406664719,
    "y0": 718.2553527959573,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 309.7727404361643,
      "y": 506,
      "z": 479.10568673106945,
    },
    "isLeaf": true,
    "length": 43.40133574044876,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 309.7727404361643,
      "y": 506,
      "z": 500.80635460129383,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 35.62180078108145,
    "x0": 541.9618400456236,
    "y0": 718.2553527959573,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 358.178439815316,
      "y": 506,
      "z": 479.10568673106945,
    },
    "isLeaf": true,
    "length": 43.40133574044876,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 358.178439815316,
      "y": 506,
      "z": 500.80635460129383,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 35.62180078108145,
    "x0": 590.3675394247753,
    "y0": 718.2553527959573,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 216.1573163273785,
      "y": 506,
      "z": 528.2597768406499,
    },
    "isLeaf": true,
    "length": 17.865498290803316,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 258.171066407495,
      "y": 506,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 84.02750016023305,
    "x0": 445.15044128732023,
    "y0": 769.3270276952483,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 216.1573163273785,
      "y": 506,
      "z": 553.7956142902954,
    },
    "isLeaf": true,
    "length": 17.865498290803316,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 258.171066407495,
      "y": 506,
      "z": 553.7956142902954,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 84.02750016023305,
    "x0": 445.15044128732023,
    "y0": 794.8628651448937,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 216.1573163273785,
      "y": 506,
      "z": 579.3314517399408,
    },
    "isLeaf": true,
    "length": 17.865498290803316,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 258.171066407495,
      "y": 506,
      "z": 579.3314517399408,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 84.02750016023305,
    "x0": 445.15044128732023,
    "y0": 820.3987025945391,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 309.7727404361643,
      "y": 506,
      "z": 530.1773616303605,
    },
    "isLeaf": true,
    "length": 43.40133574044876,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 309.7727404361643,
      "y": 506,
      "z": 551.8780295005848,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 35.62180078108145,
    "x0": 541.9618400456236,
    "y0": 769.3270276952483,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 358.178439815316,
      "y": 506,
      "z": 530.1773616303605,
    },
    "isLeaf": true,
    "length": 43.40133574044876,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 358.178439815316,
      "y": 506,
      "z": 551.8780295005848,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 35.62180078108145,
    "x0": 590.3675394247753,
    "y0": 769.3270276952483,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 312.9687150856819,
      "y": 506,
      "z": 579.3314517399408,
    },
    "isLeaf": true,
    "length": 17.865498290803203,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 354.98246516579843,
      "y": 506,
      "z": 579.3314517399408,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 84.0275001602331,
    "x0": 541.9618400456236,
    "y0": 820.3987025945393,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 771.5290039756343,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 771.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": -57.117749006091444,
    },
    "isLeaf": false,
    "length": 462.9174023853805,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": 174.34095218659883,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 308.6116015902537,
    "x0": 77.15290039756343,
    "y0": 77.15290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -80.26361912536046,
      "y": 6,
      "z": -10.826008767553404,
    },
    "isLeaf": false,
    "length": 231.45870119269023,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 43.18102151074103,
      "y": 6,
      "z": -10.826008767553404,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 246.889281272203,
    "x0": 108.0140605565888,
    "y0": 123.44464063610148,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -30.817561412004892,
      "y": 506,
      "z": -61.01801993779148,
    },
    "isLeaf": true,
    "length": 200.76804468095236,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -30.817561412004892,
      "y": 506,
      "z": 39.3660024026847,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 189.60005578362546,
    "x0": 124.38241069618238,
    "y0": 138.78996889197043,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 162.7680171269643,
    },
    "isLeaf": false,
    "length": 46.29174023853807,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 185.91388724623334,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 30.861160159025417,
    "x0": 324.04218166976636,
    "y0": 401.1950820673298,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 87.90797052994824,
      "y": 506,
      "z": 164.33280834629522,
    },
    "isLeaf": true,
    "length": 40.03257536121458,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 87.90797052994824,
      "y": 506,
      "z": 184.3490960269025,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 23.55880113548136,
    "x0": 326.12856996220756,
    "y0": 404.32466450599156,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -76.40597410548229,
      "y": 4,
      "z": 405.7996533792891,
    },
    "isLeaf": false,
    "length": 77.15290039756337,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 116.4762768884263,
      "y": 4,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 385.76450198781714,
    "x0": 77.15290039756343,
    "y0": 617.2232031805074,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -105.07766006403628,
      "y": 502,
      "z": 403.19313647396604,
    },
    "isLeaf": true,
    "length": 10.426067621292304,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -105.07766006403628,
      "y": 502,
      "z": 408.4061702846122,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": 144.92233993596372,
    "y0": 650.586619568643,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 771.5290039756343,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 771.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": -57.117749006091444,
    },
    "isLeaf": false,
    "length": 462.9174023853805,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": 174.34095218659883,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 308.6116015902537,
    "x0": 77.15290039756343,
    "y0": 77.15290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -80.26361912536046,
      "y": 6,
      "z": -10.826008767553404,
    },
    "isLeaf": false,
    "length": 231.45870119269023,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 43.18102151074103,
      "y": 6,
      "z": -10.826008767553404,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 246.889281272203,
    "x0": 108.0140605565888,
    "y0": 123.44464063610148,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -30.817561412004892,
      "y": 506,
      "z": -61.01801993779148,
    },
    "isLeaf": true,
    "length": 200.76804468095236,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -30.817561412004892,
      "y": 506,
      "z": 39.3660024026847,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 189.60005578362546,
    "x0": 124.38241069618238,
    "y0": 138.78996889197043,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 162.7680171269643,
    },
    "isLeaf": false,
    "length": 46.29174023853807,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 185.91388724623334,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 30.861160159025417,
    "x0": 324.04218166976636,
    "y0": 401.1950820673298,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 87.90797052994824,
      "y": 506,
      "z": 164.33280834629522,
    },
    "isLeaf": true,
    "length": 40.03257536121458,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 87.90797052994824,
      "y": 506,
      "z": 184.3490960269025,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 23.55880113548136,
    "x0": 326.12856996220756,
    "y0": 404.32466450599156,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -76.40597410548229,
      "y": 4,
      "z": 405.7996533792891,
    },
    "isLeaf": false,
    "length": 77.15290039756337,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 116.4762768884263,
      "y": 4,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 385.76450198781714,
    "x0": 77.15290039756343,
    "y0": 617.2232031805074,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -105.07766006403628,
      "y": 502,
      "z": 403.19313647396604,
    },
    "isLeaf": true,
    "length": 10.426067621292304,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -105.07766006403628,
      "y": 502,
      "z": 408.4061702846122,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": 144.92233993596372,
    "y0": 650.586619568643,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 158.5,
      "y": 2,
      "z": -45.75,
    },
    "isLeaf": false,
    "length": 817,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 158.5,
      "y": 2,
      "z": 362.75,
    },
    "path": "/root",
    "visible": true,
    "width": 817,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 122.5,
      "y": 4,
      "z": -21.75,
    },
    "isLeaf": true,
    "length": 721,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 122.5,
      "y": 4,
      "z": 338.75,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 649,
    "x0": 48,
    "y0": 48,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -39.75,
      "y": 502,
      "z": 543,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 284.75,
      "y": 502,
      "z": 543,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 649,
    "x0": 48,
    "y0": 793,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 143,
      "y": 2,
      "z": -53.5,
    },
    "isLeaf": false,
    "length": 786,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 143,
      "y": 2,
      "z": 339.5,
    },
    "path": "/root",
    "visible": true,
    "width": 786,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -108.68374558303884,
      "y": 4,
      "z": -37.5,
    },
    "isLeaf": true,
    "length": 722,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -108.68374558303884,
      "y": 4,
      "z": 323.5,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 218.63250883392232,
    "x0": 32,
    "y0": 32,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 224.31625441696116,
      "y": 4,
      "z": -37.5,
    },
    "isLeaf": false,
    "length": 722,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 224.31625441696116,
      "y": 4,
      "z": 323.5,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 383.3674911660777,
    "x0": 282.6325088339223,
    "y0": 32,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 128.72438162544174,
      "y": 6,
      "z": -98.40226628895184,
    },
    "isLeaf": true,
    "length": 175.19546742209633,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 256.90812720848055,
      "y": 6,
      "z": -98.40226628895184,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 256.3674911660777,
    "x0": 314.6325088339223,
    "y0": 64,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 192.81625441696116,
      "y": 6,
      "z": 133.89660056657226,
    },
    "isLeaf": true,
    "length": 450.8045325779037,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 192.81625441696116,
      "y": 6,
      "z": 359.29886685552407,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 256.3674911660777,
    "x0": 314.6325088339223,
    "y0": 271.1954674220963,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 128.72438162544174,
      "y": 504,
      "z": 488,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 256.90812720848055,
      "y": 504,
      "z": 488,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 256.3674911660777,
    "x0": 314.6325088339223,
    "y0": 738,
    "z0": 4,
  },
]
`;
